--- a/app/public/app.pug
+++ b/app/public/app.pug
@@ -6,6 +6,6 @@ html(lang='ua').wjs-MobileHeightFix
     link(rel='stylesheet' type='text/css' href='../css/main.css')
     link(rel='icon', href='../img/logo.png')
     script(defer src='../js/main.js')
-    title My-cha-cha :)
+    title Login
   body
     include ../templates/notSignedPage/notSignedPage.pug
