--- a/app/templates/popups/popups.pug
+++ b/app/templates/popups/popups.pug
@@ -194,10 +194,22 @@
       button.popup__close
         i.ico &#x4d;
     .popup__body
-      .popup__text Виберіть нове зображення для аватарки
-      input(type="file" name="ava")
+      form#changeUserAvaForm
+        //(enctype="multipart/form-data")
+        .popup__text Виберіть нове зображення для аватарки
+        input(type="file" name="ava")
+    .popup__messages-area
+      .popup__message.popup__message_error
+        i.ico &#x73;
+        span Виберіть картинку
+      .popup__message.popup__message_error
+        i.ico &#x73;
+        span Не коректний тип файлу. Картинка повинна бути у форматі jpg, jpeg або png
+      .popup__message.popup__message_error
+        i.ico &#x73;
+        span Завеликий розмір файлу. Картинка повинна бути меншою за 2 мегабайти
     .popup__footer
-      button(type="submit").popup__btn так
+      button(type="submit" form="changeUserAvaForm").popup__btn так
       button(type="button" data-role="resetPopup").popup__btn скасувати
 
   //- group chat
