--- a/app/templates/popups/popups.pug
+++ b/app/templates/popups/popups.pug
@@ -207,7 +207,7 @@
         span Не коректний тип файлу. Картинка повинна бути у форматі jpg, jpeg або png
       .popup__message.popup__message_error
         i.ico &#x73;
-        span Завеликий розмір файлу. Картинка повинна бути меншою за 2 мегабайти
+        span Завеликий розмір файлу. Картинка повинна бути меншою за 5 мегабайт
     .popup__footer
       button(type="submit" form="changeUserAvaForm").popup__btn так
       button(type="button" data-role="resetPopup").popup__btn скасувати
