--- a/app/public/pug/login.pug
+++ b/app/public/pug/login.pug
@@ -39,7 +39,7 @@ html(lang='ua').wjs-MobileHeightFix
               h5(data-translate="h51") щоб увійти, введіть пароль і логін
               h5(data-translate="h52" style="display: none") щоб почати користуватися чатом, пройдіть реєстрацію
 
-              form(name="loginForm" method="post" action="api/authorization/login")
+              form(name="loginForm" method="post" data-action="api/authorization/login")
                 input(name="lang" type="hidden" value="ua")
                 input(name="name" type="name" placeholder="логін…")
                 .error-info
