--- a/app/templates/notSignedPageBody/notSignedPageBody.pug
+++ b/app/templates/notSignedPageBody/notSignedPageBody.pug
@@ -29,7 +29,7 @@
           h5(data-translate="h51") щоб увійти, введіть пароль і логін
           h5(data-translate="h52" style="display: none") щоб почати користуватися чатом, пройдіть реєстрацію
 
-          form(name="loginForm" method="post" action="api/authorization/login")
+          form(name="loginForm" method="post" data-action="api/authorization/login")
             input(name="lang" type="hidden" value="ua")
             input(name="name" type="name" placeholder="логін…")
             .error-info
