--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -291,18 +291,45 @@ html.wjs-MobileHeightFix body {
   position: absolute;
   z-index: 3;
   background-color: #005159;
-  padding: 0 6px;
   display: none;
   -webkit-transition: height 0.3s;
   -o-transition: height 0.3s;
   transition: height 0.3s;
+  overflow: hidden;
 }
 .header__search-results-wrapper_active {
   height: 300px;
   -webkit-transition: height 0.3s;
   -o-transition: height 0.3s;
   transition: height 0.3s;
+}
+.header__search-results-wrapper-inner {
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+}
+.header__search-result {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #40E0D0;
+  cursor: pointer;
+  -webkit-transition: background-color 0.3s;
+  -o-transition: background-color 0.3s;
+  transition: background-color 0.3s;
   padding: 6px;
+  position: relative;
+}
+.header__search-result .logo {
+  width: 30px;
+  height: 30px;
+  font-size: 0.8em;
+}
+.header__search-result:hover {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .subheader {
