--- a/app/templates/header/header.scss
+++ b/app/templates/header/header.scss
@@ -86,13 +86,34 @@
     position: absolute;
     z-index: 3;
     background-color: #005159;
-    padding: 0 6px;
     display: none;
     transition: height .3s;
+    overflow: hidden;
     &_active {
       height: 300px;
       transition: height .3s;
-      padding: 6px;
+    }
+  }
+  &__search-results-wrapper-inner {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+  }
+  &__search-result {
+    display: flex;
+    align-items: center;
+    color: $d0;
+    cursor: pointer;
+    transition: background-color .3s;
+    padding: 6px;
+    position: relative;
+    .logo {
+      width: 30px;
+      height: 30px;
+      font-size: .8em;
+    }
+    &:hover {
+      background-color: rgba(0,0,0,.3);
     }
   }
 }
