побудова списку контактів, завантаження аватарки юзера при старті

--- a/app/public/pug/app.pug
+++ b/app/public/pug/app.pug
@@ -26,7 +26,7 @@ html(lang='en').wjs-MobileHeightFix
                 //- include ../../templates/contactlist/contactlist.pug
 
               .list(data-list-group="aside" data-list="usercard")
-                //- include ../../templates/usercard/usercard.pug
+                include ../../templates/usercard/usercard.pug
               .list(data-list-group="aside" data-list="groupcard")
                 //- include ../../templates/groupcard/groupcard.pug
               .list(data-list-group="aside" data-list="chat")
@@ -38,7 +38,7 @@ html(lang='en').wjs-MobileHeightFix
         .list.list_active(data-list-group="page" data-list="startP")
           p.right-side__info Виберіть чат або контакт і почніть спілкування
         .list(data-list-group="page" data-list="usercardP")
-          //- include ../../templates/usercard/usercard.pug
+          include ../../templates/usercard/usercard.pug
         .list(data-list-group="page" data-list="groupcardP")
           //- include ../../templates/groupcard/groupcard.pug
         .list(data-list-group="page" data-list="chatP")
