--- a/app/templates/contactlist/contactlist.pug
+++ b/app/templates/contactlist/contactlist.pug
@@ -1,11 +1,11 @@
 ul.contact-list
 
-  li.contact-item(data-id="ELqbedghwM7mgMuJ")
+  li.contact-item(data-id="ELqbedwM7mgMuJfmj4jshanb")
     .logo
       p.logo__name JW
       img.logo__img(src="../img/users/user1.jpg")
       .logo__status.logo__status_offline
-      .logo__status.logo__status_online
+      //- .logo__status.logo__status_online
     .contact-item__name Jean Waverly
 
 //- приклад для стилізації фронтенду
