--- a/app/templates/signedPageBody/signedPageBody.pug
+++ b/app/templates/signedPageBody/signedPageBody.pug
@@ -17,7 +17,7 @@
             //- include ../contactlist/contactlist.pug
 
           .list(data-list-group="aside" data-list="usercard")
-            //- include ../usercard/usercard.pug
+            include ../usercard/usercard.pug
           .list(data-list-group="aside" data-list="groupcard")
             //- include ../groupcard/groupcard.pug
           .list(data-list-group="aside" data-list="chat")
@@ -29,7 +29,7 @@
     .list.list_active(data-list-group="page" data-list="startP")
       p.right-side__info Виберіть чат або контакт і почніть спілкування
     .list(data-list-group="page" data-list="usercardP")
-      //- include ../usercard/usercard.pug
+      include ../usercard/usercard.pug
     .list(data-list-group="page" data-list="groupcardP")
       //- include ../groupcard/groupcard.pug
     .list(data-list-group="page" data-list="chatP")
