--- a/app/templates/usercard/usercard.pug
+++ b/app/templates/usercard/usercard.pug
@@ -1,6 +1,6 @@
 .logo.logo_user-card
   p.logo__name PR
-  img.logo__img(src="../img/users/user1.jpg")
+  img.logo__img(src="")
 .user-info
   .user-info__name Philomena Resendez
   .user-info__id @philomenaRezzz
