--- a/app/templates/popups/popups.pug
+++ b/app/templates/popups/popups.pug
@@ -287,17 +287,18 @@
       button.popup__close
         i.ico &#x4d;
     .popup__body
-      .popup__list-wrapper.wjs-scroll(data-scroll='right'  data-scroll-hidden='horizontal')
-        .wjs-scroll__content-wrapper
-          .wjs-scroll__content
-            ul.popup__list
-              li.popup__item
-                .logo
-                  p.logo__name AB
-                  img.logo__img(src="../img/users/user1.jpg")
-                .popup__user-name Estrella Wildauer
-                button.popup__user-restore
-                  i.ico &#x4d;
+      .popup__list-wrapper
+        .wjs-scroll(data-scroll='right'  data-scroll-hidden='horizontal')
+          .wjs-scroll__content-wrapper
+            .wjs-scroll__content
+              ul.popup__list
+                //- li.popup__item
+                //-   .logo
+                //-     p.logo__name AB
+                //-     img.logo__img(src="../img/users/user1.jpg")
+                //-   .popup__user-name Estrella Wildauer
+                //-   button.popup__user-restore
+                //-     i.ico &#x4d;
 
   //- show info
   .popup#popupShowInfo
