--- a/app/templates/popups/popups.pug
+++ b/app/templates/popups/popups.pug
@@ -215,7 +215,7 @@
   //- group chat
   .popup.popup_search#popupGroupChat
     .popup__header
-      h4.popup__header-name Створити новий чат
+      h4.popup__header-name Редактор чату
       button.popup__close
         i.ico &#x4d;
     .popup__body
